[project]
name = "risk-agent-demo"
version = "0.1.0"
description = "这是一个通过智能AI自动识别安全风险隐患多应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
