[project]
name = "risk-agent-demo"
version = "0.1.0"
description = "这是一个通过智能AI自动识别安全风险隐患多应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "booktype>=1.5",
    "chromadb>=1.5.9",
    "dashscope>=1.25.17",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpcore>=1.0.9",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-redis>=0.4.1",
    "langgraph-sdk>=0.3.14",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "pysnowflake>=0.1.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy[asyncio]>=2.0.49",
    "unstructured[all-docs]>=0.22.27",
    "uvicorn>=0.46.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "passlib>=1.7.4",
    "starlette>=1.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
